# chimera

./: CITATION.cff  Makefile  README.md  docker-compose.yaml
chimera/: Dockerfile  pyproject.toml  requirements.txt
chimera/src/api/: endpoints.py
chimera/src/api/dependencies/: repository.py
chimera/src/api/routes/: customized.py  health.py  test.py
chimera/src/config/: events.py
chimera/src/config/settings/: base.py
chimera/src/models/schemas/: test.py
chimera/src/repository/: events.py  inference_eng.py
chimera/src/repository/rag/: engine.py
notebooks/: create-new-dataset-for-gps.ipynb
