[tool.poetry]
name = "chimera"
version = "0.0.1"
description = "The mighty monster project of SkywardAI"
authors = ["SkywardAI <chuan.z@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
argon2-cffi = "23.1.0"
asgi-lifespan = "2.1.0"
async-timeout = "4.0.3"
asyncio = "3.4.3"
bcrypt = "4.0.1"
email-validator = "2.1.1"
fastapi = "0.112.2"
greenlet = "3.0.3"
httpx = "0.27.2"
loguru = "0.7.2"
passlib = "1.7.4"
pathlib = "1.0.1"
pydantic-settings = "2.2.1"
python-decouple = "3.8"
python-dotenv = "1.0.1"
PyJWT= "2.8.0"
python-multipart = "0.0.9"
python-slugify = "8.0.4"
trio = "0.25.0"
uvicorn = "0.30.6"


[tool.poetry.dev-dependencies]
python = "^3.11"
argon2-cffi = "23.1.0"
asgi-lifespan = "2.1.0"
async-timeout = "4.0.3"
asyncio = "3.4.3"
bcrypt = "4.0.1"
email-validator = "2.1.1"
fastapi = "0.112.2"
greenlet = "3.0.3"
httpx = "0.27.2"
loguru = "0.7.2"
passlib = "1.7.4"
pathlib = "1.0.1"
pydantic-settings = "2.2.1"
python-decouple = "3.8"
python-dotenv = "1.0.1"
PyJWT= "2.8.0"
python-multipart = "0.0.9"
python-slugify = "8.0.4"
trio = "0.25.0"
uvicorn = "0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
